# ICD-10-UKR-backend

./: README.md  docker-compose.yml  load_data.py  pyproject.toml
icd_10_app/: crud.py  database.py  main.py  models.py  schemas.py
