[tool.poetry]
name = "icd-10--backend-fastapi"
version = "0.1.0"
description = ""
authors = ["andriyor <andriyorehov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.5"
psycopg2 = "^2.8.6"
pydantic = "^1.8.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
